<resources>
    <string name="app_name">Demo04_Intent</string>
    <string name="title_main">Demo 04 - Intent</string>
    <string name="btn_page_1">Page 1</string>
    <string name="btn_page_2">Page 2</string>
    <string name="btn_leave_app">Quitter (╯°□°）╯︵ ┻━┻</string>
    <string name="title_page_one">Page One !!!</string>
    <string name="title_page_two">Page Two 🖤</string>
    <string name="btn_question">Question ?</string>
    <string name="title_question">Votre couleur ?</string>
    <string name="response_like">Vous aimez le %s</string>
    <string name="response_none">Bouhou, t\'as pas répondu :(</string>
    <string name="alarm_msg">Hello World 💌</string>
    <string name="btn_alarm">Créer une alarme 💖</string>
    <string name="btn_permission">Demo de demande de permission 📑</string>
</resources>