<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacer"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/spacer"
        />

    <Button
        android:id="@+id/btn_main_page1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_page_1"
        android:layout_below="@id/tv_main_title"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/sp_main_btn_page"
        />

    <Button
        android:id="@+id/btn_main_page2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_page_2"
        android:layout_below="@id/tv_main_title"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/sp_main_btn_page"
        />

    <Space
        android:id="@+id/sp_main_btn_page"
        android:layout_width="@dimen/spacer"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_main_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_leave_app"
        android:layout_marginTop="@dimen/spacer"
        android:layout_below="@id/btn_main_question"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#B10000"
        android:textColor="#8EFBFF"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_main_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_question"
        android:backgroundTint="#D90"
        android:layout_below="@id/btn_main_page1"
        />

    <TextView
        android:id="@+id/tv_main_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_main_page1"
        android:layout_toEndOf="@id/btn_main_question"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/btn_main_question"
        android:layout_alignBottom="@id/btn_main_question"
        android:gravity="center_vertical"
        android:padding="5dp"
        />


</RelativeLayout>